# app

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  db-config.json  fix_others.cjs  fix_storage.cjs  fix_storage.js  gradle.properties  jest.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.ts  test.html  vite.config.js  vite.config.ts  wrangler.toml
client/src-tauri/: Cargo.toml  README.md  SETUP_ICONS.md  SPLASHSCREEN_README.md  setup-icons.ps1  splashscreen.html  tauri.conf.json  tauri.js
client/src-tauri/icons/: icon.icns
client/src-tauri/server/: check-zone-data.js  clean-attachments.js  config.ts  db-sqlite.ts  db.ts  debug-attachments.js  index.ts  init-admin-simple.js  init-admin.ts  init-simple.cjs  knexfile.ts  package-lock.json  package.json  storage.ts  test-db-connection.js  test-simple.js  tsconfig.json  types.ts  vite.ts
client/src-tauri/server/__tests__/: alerts.controller.test.ts
client/src-tauri/server/controllers/: alerts.controller.ts  auth.controller.ts  huntingReports.controller.ts  infractions.controller.ts  protectedZones.controller.ts  regional.controller.ts  regions.controller.ts  shapefile.controller.ts  statuses.controller.ts  zones.controller.ts
client/src-tauri/server/data/: scodipp.db
client/src-tauri/server/db/: create_settings_table.sql
client/src-tauri/server/lib/: geoAgentLookup.ts  resolveAdminAreas.ts
client/src-tauri/server/routes/: admin.routes.ts  alerts.routes.ts  index.ts  (+22 more)
client/src-tauri/shared/: schema.ts
client/src-tauri/src/: lib.rs  main.rs  server.rs
(+536 files in other folders)
