[package]
name = "scodipp"
version = "1.0.0"
description = "Système de Contrôle et de Digitalisation des Permis et des Prélèvements"
authors = ["Abdoulaye SENE"]
license = ""
repository = ""
edition = "2021"

# Library target required for mobile (Android/iOS)
[lib]
 name = "scodipp"
 crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"     # Optimiser pour la taille
lto = true          # Link Time Optimization
codegen-units = 1   # Meilleure optimisation
strip = true        # Retirer les symboles de debug
